--- a/lesson20/formValidation/styles/styles.css
+++ b/lesson20/formValidation/styles/styles.css
@@ -1,1 +1,46 @@
 /* put your styles here */
+
+
+body{
+ margin: 0;
+ padding: 0;
+ background-color: antiquewhite;
+}
+
+h1{
+    font-size: 40px;
+    margin: 40px;
+    display: flex;
+}
+
+form{
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+label {display: block;}
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049}
