--- a/lesson20/formValidation/styles/styles.css
+++ b/lesson20/formValidation/styles/styles.css
@@ -4,7 +4,7 @@
 body{
  margin: 0;
  padding: 0;
- background-color: antiquewhite;
+ background-color: rgb(130, 147, 171);
 }
 
 h1{
@@ -35,8 +35,8 @@ input[type=submit] {
   width: 100%;
   background-color: #4CAF50;
   color: white;
-  padding: 14px;
-  margin: 8px 0;
+  padding: 12px;
+  margin: 8px 10px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
